fixed issue with menu wrap

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -109,6 +109,7 @@
       &.active,
       &:hover {
         color: $bd-topaz-main;
+        text-wrap: nowrap;
 
         &::after {
           height: 2px;
